test/tests/compiler/5_local_variables/valid/extra_credit/compound_minus.plx
pub fn main(none) i32 {
    to_subtract: i32 = 10
    to_subtract -= 8
    return to_subtract
}
