test/tests/compiler/5_local_variables/invalid_parse/invalid_variable_name.plx
pub fn main(none) i32 {
    10: i32 = 0
    return 10
}
